--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="https://wa.me/5491138884570/?text=Hola%20quería%20hacer%20una%20consulta" target="_blank">
             <img class="chat__icono" src="img/iconos/chat.png" alt="icono de chat">
         </a>
-    </div>
+    </div><!--Fin Chat Whatsapp-->
     <!--Marquesina-->
     <marquee class="marquesina" behavior="" direction="left">12 Cuotas sin interés con Visa y Master</marquee> 
     <header class="encabezado">
@@ -95,7 +95,7 @@
             </section><!--Fin sección-->
         </div><!--Fin container-fluid-->   
         <div class="tituloProductos">
-            <h1>NUESTROS PRODUCTOS</h1>
+            <h1>pensados para vos</h1>
         </div><!--Fin titulo-->  
         <section class="productos_img">
             <div class="productos_contenido">
@@ -108,7 +108,7 @@
                 <div class="producto_link">
                     <a href="productos.html#corpiños" class="btn btn1">Ver más</a>
                 </div>
-                </div>
+            </div>
             <div class="productos_contenido">
                 <div class="producto_imagen">
                     <img src="img/bombacha_2.1.png" alt="imagen bombacha">
@@ -175,5 +175,5 @@
         <script>AOS.init();</script>
         <!--JS Bootstrap-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    </body>
+</body>
 </html>
