--- a/preguntas.html
+++ b/preguntas.html
@@ -22,7 +22,7 @@
         <a href="https://wa.me/5491138884570/?text=Hola%20quería%20hacer%20una%20consulta" target="_blank">
             <img class="chat__icono" src="img/iconos/chat.png" alt="icono de chat">
         </a>
-    </div>
+    </div><!--Fin Chat Whatsapp-->
     <header class="encabezado">
         <!--Navbar toggler-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -72,7 +72,7 @@
                 <img src="img/iconos/ico_wester.png" alt="wester union" class="tarjeta">
             </div>
             <div class="ico_envio">
-                <img src="img/iconos/truck.png" alt="" class="ico_truck">
+                <img src="img/iconos/truck.png" alt="camion" class="ico_truck">
             </div> 
     </main>
     <footer class="pie">
@@ -115,5 +115,5 @@
     </footer><!--Fin Footer-->
         <!--JS Bootstrap-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    </body>
+</body>
 </html>
