--- a/tabla.html
+++ b/tabla.html
@@ -22,7 +22,7 @@
         <a href="https://wa.me/5491138884570/?text=Hola%20quería%20hacer%20una%20consulta" target="_blank">
             <img class="chat__icono" src="img/iconos/chat.png" alt="icono de chat">
         </a>
-    </div>
+    </div><!--Fin Chat Whatsapp-->
     <header class="encabezado">
         <!--Navbar toggler-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -30,7 +30,6 @@
                 <!--Menú Hambuerguesa-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon ico-Hamb"></span>
                 </button>
-                
                 <!--Logo-->
                 <a class="navbar-brand" href="index.html"><img src="img/Logo.png" alt="logo" width="150" height="auto" class="d-inline-block align-text-top"></a><!--Fin Logo-->
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
@@ -49,8 +48,8 @@
         </nav><!--Fin Navbar toggler-->
         <!--Logo-->
     </header>
-    <body>
-        <main class="tabla">
+<body>
+    <main class="tabla">
         <h1>Tablas de talles</h1>
         <div class="detalle_busto">
             <h2>¿Cómo saber qué talle de Corpiño soy?</h2>
@@ -175,12 +174,12 @@
                     <li class="pie__item"><a class="pie__link" href="preguntas.html">Preguntas frecuentes</a></li>
                     <li class="pie__item"><a class="pie__link" href="contacto.html">Contacto</a></li>
                 </ul><!--Fin menu--> 
-            <div class="pie__designed">
-                <p>Designed by Verónica Vipputo</p>  
-            </div><!--Fin designed-->
+                <div class="pie__designed">
+                    <p>Designed by Verónica Vipputo</p>  
+                </div><!--Fin designed-->
         </div><!--Fin container-->
     </footer><!--Fin Footer-->
         <!--JS Bootstrap-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    </body>
+</body>
 </html>
