--- a/productos.html
+++ b/productos.html
@@ -22,7 +22,7 @@
         <a href="https://wa.me/5491138884570/?text=Hola%20quería%20hacer%20una%20consulta" target="_blank">
             <img class="chat__icono" src="img/iconos/chat.png" alt="icono de chat">
         </a>
-    </div>
+    </div><!--Fin Chat Whatsapp-->
     <header class="encabezado">
         <!--Navbar toggler-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
@@ -46,7 +46,7 @@
                 </div><!--Fin collapse navbar-collapse-->
             </div><!--Fin container-fluid-->
         </nav><!--Fin Navbar toggler-->
-      </header>
+    </header>
     <main>
         <div class="container">
             <section class="row">
@@ -206,7 +206,6 @@
                 </article>
             </section><!--Fin segunda section-->   
         </div><!--Fin container-->                   
-
     </main>
     <footer class="pie">
         <div class="container footerNewsletter">
@@ -248,6 +247,6 @@
     </footer><!--Fin Footer-->
         <!--JS Bootstrap-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    </body>
+</body>
 </html>
 
